# ArduinoContinuousStepper

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  ContinuousStepper.h  ContinuousStepperBase.h  ContinuousStepper_Timer.h  ContinuousStepper_Timer1.cpp  ContinuousStepper_Timer1.h  ContinuousStepper_Timer3.h  LICENSE.md  README.md  TimerOneAdapter.hpp  keywords.txt  library.properties
.github/workflows/: test.yml
examples/AwfExample/: AwfExample.ino
examples/BasicExample/: BasicExample.ino
examples/TeensyPwmExample/: TeensyPwmExample.ino
examples/TeensyTimerToolExample/: TeensyTimerToolExample.ino
examples/Timer1Example/: Timer1Example.ino
examples/Timer3Example/: Timer3Example.ino
examples/ToneExample/: ToneExample.ino
extras/tests/: CMakeLists.txt
extras/tests/ArduinoStub/: Arduino.cpp  Arduino.h  CMakeLists.txt
extras/tests/ContinuousStepperTests/: .clang-format  CMakeLists.txt  ContinuousStepper_AWF.cpp  ContinuousStepper_KhoiH.cpp  ContinuousStepper_TeensyTimerTool.cpp  ContinuousStepper_Timer1.cpp  ContinuousStepper_Timer3.cpp  ContinuousStepper_Tone.cpp  acceleration.cpp  begin.cpp  helpers.cpp  helpers.hpp  isPowered.cpp  powerOff.cpp  powerOn.cpp  setEnablePin.cpp  spin.cpp  stop.cpp
extras/tests/EventLog/: CMakeLists.txt  EventLog.cpp
extras/tests/TestFixtures/: Arduino.cpp  Arduino.h  CMakeLists.txt  Clock.cpp  Clock.hpp  EventLog.cpp  EventLog.hpp  TeensyTimerTool.h  Teensy_PWM.h  TestFixtures.hpp  TimerOne.h  TimerThree.h  main.cpp
src/: CMakeLists.txt  ContinuousStepper.h  ContinuousStepper.hpp  ContinuousStepperBase.h  ContinuousStepperImpl.h  ContinuousStepperImpl.hpp  ContinuousStepperWithOscillator.hpp  ContinuousStepper_AWF.h  ContinuousStepper_KhoiH.h  ContinuousStepper_TeensyTimerTool.h  ContinuousStepper_Timer1.h  ContinuousStepper_Timer3.h  ContinuousStepper_TimerX.hpp  ContinuousStepper_Tone.h  TimerOneAdapter.hpp  attributes.h
src/ContinuousStepper/: ContinuousStepperImpl.hpp  OutputPin.hpp  StepperInterfaces.hpp
src/ContinuousStepper/Tickers/: AnalogWriteFrequency.h  AnalogWriteFrequency.hpp  KhoiH_PWM.h  KhoiH_PWM.hpp  OscillatorTicker.hpp  TeensyTimerTool.h  TeensyTimerTool.hpp  TimerOne.h  TimerOne.hpp  TimerThree.h  TimerThree.hpp  TimerX.hpp  Tone.h  Tone.hpp
